--- a/src/App.css
+++ b/src/App.css
@@ -1,85 +1,141 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: 'Arial', sans-serif;
+  overflow-x: hidden;
+  background: url('./images/calm asf.jpg') center/cover no-repeat;
+  font-family: Arial, sans-serif;
 }
 
-.app-container {
-  overflow: hidden;
-  /* Hide the scrollbar */
+@font-face {
+  font-family: tommy;
+  src: url(./MADE\ TOMMY\ Regular_PERSONAL\ USE.otf)
 }
 
-.hero-section {
-  height: 100vh;
-  /* 100% viewport height */
-  width: 100%;
-  /* 100% viewport width */
-  position: relative;
-  overflow: hidden;
+* {
+  font-family: tommy;
 }
 
-.hero-image {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
+.container {
   display: flex;
+  height: 100vh;
+}
+
+#apps-container {
+  margin-top: 1.5rem;
+  margin-bottom: 1.5rem;
+  width: 30rem;
+  background-color: transparent;
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+#apps-container h1{
+  margin: 0;
+  color: #fff;
+}
+
+.app-box {
+  width: 15rem;
+  height: 20rem;
+  margin: 1rem 0;
+  background-color: aliceblue;
+  text-align: center;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.app-box:hover {
+  background-color: #eee;
+}
+
+.searchbar-box {
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  margin-top: -5rem;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
 }
 
-.content {
-  background-color: black;
-  color: white;
-  height: 50rem;
-  padding: 1rem;
+input {
+  width: 35rem;
+  height: 2.5rem;
+  border-radius: 25rem;
+  border: none;
+  padding-left: 1rem;
+  color: black;
 }
-
-
-::-webkit-scrollbar {
-  width: 5px;
-  background: black;
+.searchbar-box h1{
+  color: #fff;
+  font-size: 5rem;
+  margin-bottom: 0;
+  text-shadow: 0 0 3px white;
 }
-
-/* Track */
-::-webkit-scrollbar-track {
-  border-radius: 10px;
+.enter-button {
+  display: none;
 }
-
-/* Handle */
-::-webkit-scrollbar-thumb {
-  background: #601e31ae;
-}
-.container{
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  align-items: center;
-  width: 100%;
-  height: 50rem;
-}
-.circle-divs{
-  margin-top: 5rem;
+#popup-container {
+  display: show;
+  margin-left: 10rem;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   width: 60rem;
-  height: 18rem;
-  border-radius: 10rem;
-  background-color: #601e31ae;
+  height: 70vh;
+  background-color: #fff;
+  border: 1px solid #ccc;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  overflow: hidden;
 }
-input{
-  border-radius: 1rem;
-  background-color: azure;
-  border: none;
-  height: 1.5rem;
-  width: 20rem;
+
+#popup-header {
+  background-color: #575757;
+  color: #fff;
+  padding: .5rem;
+  text-align: center;
 }
-.all{
+
+#popup-content {
+  background-color: #9AAAB4;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  
+}
+
+#close-btn {
   position: absolute;
+  padding: .5rem .7rem;
+  top: 0;
+  right: 0;
+  cursor: pointer;
+  color: #fff;
+  background-color: #d00505;
 }
-.all button{
+.quote-container{
+    margin-top: 5rem;
+  width: 30rem;
+  text-align: center;
+  color: white;
+}
+.quote-container h2{
+  font-size: 3rem;
+
+}
+.quote-container button{
+  border-radius: 25rem;
   border: none;
-  background-color: transparent;
-  width: 2rem;
-  height: 1.6rem;
-  position: absolute;
-  margin-left: -2rem;
-  font-size: .9rem;
+  padding: .5rem;
+}
+#quote{
+  background-image: url(./images/luh\ fortuen\ cook.PNG);
+  background-position: center;
+  background-size: cover;
+  box-shadow: 0 0 5px #9AAAB4;
 }
